Refs #140518 - Fix spacing near icon.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -737,8 +737,6 @@ div#page-document {
           }
 
           span.cluster-icon {
-            margin-right: 10px;
-
             i.icon {
               margin-left: 0px;
               background: white;
